# CECLI_RUST

./: .gitignore  BUG_FIX.md  Cargo.toml  README.md  TODO.md
.github/workflows/: build-and-release.yml
crates/ceair-agent/: Cargo.toml
crates/ceair-agent/src/: agent_config.rs  buddy.rs  buddy_observer.rs  compaction.rs  dream_executor.rs  executor.rs  hooks.rs  intent_gate.rs  lib.rs  memdir.rs  memory.rs  memory_recall.rs  message_group.rs  prompt_suggestion.rs  reinjection.rs  skills.rs  tips.rs  token_budget.rs  verification.rs
crates/ceair-ai/src/: fallback.rs  lib.rs  model_roles.rs  provider.rs
crates/ceair-cli/: Cargo.toml
crates/ceair-cli/src/: main.rs  oauth.rs  slash.rs  slash_builtins.rs  zellij.rs
crates/ceair-config/src/: config.rs  jsonc.rs  lib.rs
crates/ceair-control-protocol/: Cargo.toml
crates/ceair-control-protocol/src/: command.rs  lib.rs
crates/ceair-control-server/: Cargo.toml
crates/ceair-control-server/src/: approval_api.rs  auth.rs  lib.rs  rate_limit.rs  routes.rs  session_api.rs  session_router.rs  worker_registry.rs  ws.rs
crates/ceair-control-server/tests/: api_tests.rs
crates/ceair-invariant/: Cargo.toml
crates/ceair-invariant/src/: checker.rs  gate.rs  healing.rs  lib.rs  report.rs  rollback.rs  runtime_guard.rs
crates/ceair-mesh/src/: agent_comm.rs  lib.rs
crates/ceair-session/: Cargo.toml
crates/ceair-session/src/: blob.rs  entry.rs  error.rs  lib.rs  manager.rs  storage.rs  tree.rs
crates/ceair-tools/: Cargo.toml
crates/ceair-tools/src/: ast_tool.rs  browser_tool.rs  calc_tool.rs  edit_tool.rs  lib.rs  notebook_tool.rs  permissions.rs  python_tool.rs  registry.rs  ssh_tool.rs  task_management.rs  task_tool.rs  tool_hooks.rs
crates/ceair-tui/src/: lib.rs
crates/ceair-worker/: Cargo.toml
crates/ceair-worker/src/: approval_bridge.rs  event_bridge.rs  gateway_client.rs  lib.rs  runtime.rs  session_bridge.rs
crates/chengcoding-agent/: Cargo.toml
crates/chengcoding-agent/src/: agent_loop.rs  auto_compact.rs  auto_dream.rs  buddy.rs  category.rs  context.rs  custom_tools.rs  executor.rs  lib.rs  memdir.rs  memory.rs  memory_index.rs  pipeline.rs  skills.rs  task_system.rs  tool_summary.rs  ttsr.rs
crates/chengcoding-ai/: Cargo.toml
crates/chengcoding-ai/src/: lib.rs  model_roles.rs
crates/chengcoding-audit/: Cargo.toml
crates/chengcoding-audit/src/: lib.rs  secrets.rs
crates/chengcoding-cli/: Cargo.toml
crates/chengcoding-cli/src/: main.rs  oauth.rs  slash.rs  slash_builtins.rs
crates/chengcoding-config/: Cargo.toml
crates/chengcoding-config/src/: config.rs  crypto.rs  discovery.rs  lib.rs  models_config.rs  source.rs
crates/chengcoding-control-protocol/: Cargo.toml
crates/chengcoding-control-protocol/src/: error.rs
crates/chengcoding-control-server/: Cargo.toml
crates/chengcoding-control-server/src/: approval_api.rs  lib.rs  routes.rs  session_api.rs  session_router.rs  worker_api.rs  ws.rs
crates/chengcoding-control-server/tests/: api_tests.rs
crates/chengcoding-core/: Cargo.toml
crates/chengcoding-core/src/: error.rs  event.rs  lib.rs  types.rs
crates/chengcoding-invariant/: Cargo.toml
crates/chengcoding-invariant/src/: gate.rs  healing.rs
crates/chengcoding-mcp/: Cargo.toml
crates/chengcoding-mcp/src/: error.rs  lib.rs
crates/chengcoding-mesh/: Cargo.toml
crates/chengcoding-mesh/src/: agent_registry.rs  lib.rs  message_bus.rs  model_router.rs  negotiation.rs  role_system.rs  (+3 more)
crates/chengcoding-session/: Cargo.toml
crates/chengcoding-tools/: Cargo.toml
crates/chengcoding-tui/: Cargo.toml
crates/chengcoding-worker/: Cargo.toml
crates/orangecoding-agent/: Cargo.toml
crates/orangecoding-ai/: Cargo.toml
crates/orangecoding-audit/: Cargo.toml
crates/orangecoding-cli/: Cargo.toml
crates/orangecoding-cli/src/: main.rs  oauth.rs  slash.rs  slash_builtins.rs
crates/orangecoding-cli/src/commands/: config.rs  init.rs  launch.rs  mod.rs  serve.rs  status.rs
crates/orangecoding-config/: Cargo.toml
crates/orangecoding-control-protocol/: Cargo.toml
crates/orangecoding-control-server/: Cargo.toml
crates/orangecoding-core/: Cargo.toml
crates/orangecoding-invariant/: Cargo.toml
crates/orangecoding-invariant/src/: checkpoint.rs  gate.rs  lib.rs  rules.rs
crates/orangecoding-mcp/: Cargo.toml
crates/orangecoding-mesh/: Cargo.toml
crates/orangecoding-session/: Cargo.toml
crates/orangecoding-tools/: Cargo.toml
crates/orangecoding-tui/: Cargo.toml
crates/orangecoding-worker/: Cargo.toml
docs/: SYSTEM_MANUAL.md  agent_os.md  analysis.md  bug_analysis.md  invariants.md  roadmap.md
docs/architecture/: agent-system.md  mesh.md  overview.md  security.md
docs/plans/: 2025-07-24-openagent-full-replication.md  2026-04-11-web-control-implementation.md  2026-04-11-web-public-agent-control.md  2026-04-13-autopilot-design.md  2026-04-16-tui-ux-and-provider-improvements.md
docs/reference/: hooks.md  oauth.md  permissions.md  tools.md
docs/user-guide/: agents.md  commands.md  configuration.md  getting-started.md  workflows.md
docs/verification/: BUG-001.md  BUG-002.md  BUG-003.md  BUG-004.md  BUG-CANCEL.md  BUG-SESSION-STATE.md  BUG-WS-AUTH.md
tests/: harness_alignment.rs
tests/invariants/: approval_invariants.rs  auth_invariants.rs  cancellation_invariants.rs  event_invariants.rs  session_invariants.rs  tool_permission_invariants.rs
(+149 files in other folders)
