[package]
name = "orangecoding-invariant"
version = "0.1.0"
edition = "2021"
description = "Invariant engine: rules, checker, violation reports"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
